--- a/To deploy on device/Prog.config
+++ b/To deploy on device/Prog.config
@@ -1,1 +1,1 @@
-?sec=Key1234&spr=5&du=25&spn1=zone pecher&spn0=zone avant fruitiers&spn3=jardin bacs&spn4=Greenhouse&rbt=48
+?sec=Key1234&spr=5&du=25&spn1=zone pecher&spn0=zone avant fruitiers&spn2=zone arriere&spn3=jardin bacs&spn4=Greenhouse&rbt=48
