Adding support for typical program, so can program all sprinklers in 1 click. Fixed bug in program saving

--- a/Sprinkler/SprinklerRPI.csproj
+++ b/Sprinkler/SprinklerRPI.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Models\MessageIoT.cs" />
     <Compile Include="Models\Sprinkler.cs" />
     <Compile Include="Models\SprinklerProgram.cs" />
+    <Compile Include="Models\SprinklerProgramTypical.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
