added inv setting in the program settings

--- a/To deploy on device/Prog.config
+++ b/To deploy on device/Prog.config
@@ -1,1 +1,1 @@
-?sec=AZERTY1234&spr=5&du=25&spn1=zone pecher&spn0=zone avant fruitiers&spn3=zone arriere&spn2=jardin bacs&spn4=Greenhouse&rbt=48
+?sec=AZERTY1234&spr=5&du=25&spn1=zone pecher&spn0=zone avant fruitiers&spn3=zone arriere&spn2=jardin bacs&spn4=Greenhouse&inv0=1&inv1=0&inv2=0&inv3=1&inv4=1&rbt=48
