Fixed few bugs, added threshold choice for previsions and automation

--- a/To deploy on device/wunder.config
+++ b/To deploy on device/wunder.config
@@ -1,1 +1,1 @@
-{ "Key":"", "AutomateAll":"False", "Stations": [""]}
+{ "Key":"", "AutomateAll":"False", "Stations": [""], "PrecipitationThresholdActuals":"4.0", "PrecipitationThresholdForecast":"3.0", "PrecipitationPercentForecast":"60" }
