--- a/Sprinkler/SprinklerRPI.csproj
+++ b/Sprinkler/SprinklerRPI.csproj
@@ -16,11 +16,12 @@
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <PackageCertificateKeyFile>Sprinkler_TemporaryKey.pfx</PackageCertificateKeyFile>
+    <PackageCertificateKeyFile>SprinklerRPI_TemporaryKey.pfx</PackageCertificateKeyFile>
     <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
-    <AppxPackageDir>C:\temp\spr\AppPackages\</AppxPackageDir>
+    <AppxPackageDir>C:\tmp\spr\AppPackages\</AppxPackageDir>
     <AppxBundle>Always</AppxBundle>
     <AppxBundlePlatforms>arm</AppxBundlePlatforms>
+    <PackageCertificateThumbprint>8243BDA66B07601AC9F1D596C2AEEDD50F2802EC</PackageCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -121,6 +122,7 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
+    <None Include="SprinklerRPI_TemporaryKey.pfx" />
     <None Include="Sprinkler_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
